--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -1,3 +1,20 @@
+@inproceedings{ho2016showing,
+  title={Showing versus doing: Teaching by demonstration},
+  author={Ho, Mark K and Littman, Michael and MacGlashan, James and Cushman, Fiery and Austerweil, Joseph L},
+  booktitle={Advances In Neural Information Processing Systems},
+  pages={3027--3035},
+  year={2016}
+}
+
+@inproceedings{rafferty2011faster,
+  title={Faster teaching by POMDP planning},
+  author={Rafferty, Anna N and Brunskill, Emma and Griffiths, Thomas L and Shafto, Patrick},
+  booktitle={International Conference on Artificial Intelligence in Education},
+  pages={280--287},
+  year={2011},
+  organization={Springer}
+}
+
 @inproceedings{yoon2017,
 	Author = {Yoon, Erica J and Tessler, Michael Henry and Goodman, Noah D and Frank, Michael C},
 	Booktitle = {Proceedings of the Thirty-Ninth Annual Conference of the {C}ognitive {S}cience {S}ociety},
